<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaInicial" >

   <!--  ndroid.support.v7.widget.GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
  -->
    <EditText
        android:id="@+id/etLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etSenhaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLogin"
        android:layout_below="@+id/etLogin"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvSenhaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etSenhaLogin"
        android:layout_below="@+id/etLogin"
        android:layout_marginTop="14dp"
        android:text="@string/tvSenhaLogin" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLogin"
        android:layout_alignParentTop="true"
        android:layout_marginTop="38dp"
        android:text="@string/tvLogin" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btImageTwitter"
        android:layout_alignLeft="@+id/etSenhaLogin"
        android:layout_marginBottom="23dp"
        android:text="@string/tvAcessoRedes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckedTextView
        android:id="@+id/ctvCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="42dp"
        android:text="@string/ctvCadastrar" />

    <Button
        android:id="@+id/btEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSenhaLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btEntrar" />

    <ImageButton
        android:id="@+id/btImageFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ctvCadastrar"
        android:layout_alignRight="@+id/etLogin"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="24dp"
        android:src="@drawable/ic_facebook1" />

    <ImageButton
        android:id="@+id/btImageTwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ctvCadastrar"
        android:layout_alignTop="@+id/btImageFacebook"
        android:src="@drawable/ic_twitter1" />

</RelativeLayout>